[fix]: prevent horizontal scroll on project pages

--- a/app/styles/erb-page.scss
+++ b/app/styles/erb-page.scss
@@ -14,6 +14,7 @@
       
       .erbPreviewImage {
         position: relative;
+        overflow-x: hidden;
         background-image: url("../../images/erb/desktop/erbDesktopHeader.jpg");
 
         .erbScreenshot1 {
